--- a/TrafficLights/Base.lproj/Main.storyboard
+++ b/TrafficLights/Base.lproj/Main.storyboard
@@ -1,24 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLights" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X9l-DI-Onp">
+                                <rect key="frame" x="135" y="85" width="120" height="120"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="NqW-4W-LZZ"/>
+                                    <constraint firstAttribute="width" secondItem="X9l-DI-Onp" secondAttribute="height" multiplier="1:1" id="iX2-TI-trq"/>
+                                </constraints>
+                            </view>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AeX-LI-3tW">
+                                <rect key="frame" x="135" y="247" width="120" height="120"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="AeX-LI-3tW" secondAttribute="height" multiplier="1:1" id="Rsb-0C-oo8"/>
+                                    <constraint firstAttribute="width" constant="120" id="rTu-ld-FgP"/>
+                                </constraints>
+                            </view>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mP-DC-s8n">
+                                <rect key="frame" x="135" y="409" width="120" height="120"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2mP-DC-s8n" secondAttribute="height" multiplier="1:1" id="8GM-2e-P8d"/>
+                                    <constraint firstAttribute="width" constant="120" id="vOM-s5-Ul0"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dLx-J6-cyk">
+                                <rect key="frame" x="93.666666666666686" y="750.66666666666663" width="203" height="46"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="203" id="1uc-hK-WCU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="qyi-wN-vJd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dLx-J6-cyk" secondAttribute="bottom" constant="13.5" id="4O7-wf-hY2"/>
+                            <constraint firstItem="2mP-DC-s8n" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="5i6-NJ-OVP"/>
+                            <constraint firstItem="dLx-J6-cyk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9uD-Zg-Siv"/>
+                            <constraint firstItem="X9l-DI-Onp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="CBV-QR-kL5"/>
+                            <constraint firstItem="AeX-LI-3tW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="GLm-9G-3iV"/>
+                            <constraint firstItem="2mP-DC-s8n" firstAttribute="top" secondItem="AeX-LI-3tW" secondAttribute="bottom" constant="42" id="Jmh-YR-mBw"/>
+                            <constraint firstItem="X9l-DI-Onp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="41" id="dMh-R9-Y2b"/>
+                            <constraint firstItem="AeX-LI-3tW" firstAttribute="top" secondItem="X9l-DI-Onp" secondAttribute="bottom" constant="42" id="mD4-V9-cvH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="2mP-DC-s8n" id="7Y8-Fd-lf1"/>
+                        <outlet property="redLight" destination="X9l-DI-Onp" id="Fjh-HT-qyt"/>
+                        <outlet property="startButton" destination="dLx-J6-cyk" id="z3N-yr-GLG"/>
+                        <outlet property="yellowLight" destination="AeX-LI-3tW" id="MCZ-oc-yvu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="924.61538461538453" y="-27.014218009478672"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
